--- a/ScrollingText/app/src/main/res/layout/activity_main.xml
+++ b/ScrollingText/app/src/main/res/layout/activity_main.xml
@@ -26,43 +26,26 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/article_subheading"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding_regular"
                 android:text="@string/article_subtitle"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/article"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:autoLink="web"
+                android:lineSpacingExtra="@dimen/line_spacing"
+                android:padding="@dimen/padding_regular"
+                android:text="@string/article_text" />
 
-                <TextView
-                    android:id="@+id/article"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:autoLink="web"
-                    android:lineSpacingExtra="@dimen/line_spacing"
-                    android:padding="@dimen/padding_regular"
-                    android:text="@string/article_text" />
+        </LinearLayout>
+    </ScrollView>
 
-                <Button
-                    android:id="@+id/comment_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/padding_regular"
-                    android:background="@color/colorPrimary"
-                    android:padding="@dimen/padding_regular"
-                    android:text="@string/add_comment"
-                    android:textColor="@android:color/white" />
-            </LinearLayout>
-
-    </LinearLayout>
-
-</ScrollView>
-
-    </RelativeLayout>
+</RelativeLayout>
