Adding Gabriel's bio and Team name

--- a/ScrollingText/app/src/main/res/layout/activity_main.xml
+++ b/ScrollingText/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,23 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/gabriel_heading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_regular"
+                android:text="@string/gabriel_name"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
+
+            <TextView
+                android:id="@+id/gabriel_bio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:lineSpacingExtra="@dimen/line_spacing"
+                android:padding="@dimen/padding_regular"
+                android:text="@string/gabriel_bio" />
+
+            <TextView
                 android:id="@+id/article_subheading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
