--- a/ScrollingText/app/src/main/res/layout/activity_main.xml
+++ b/ScrollingText/app/src/main/res/layout/activity_main.xml
@@ -29,21 +29,21 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/article_subheading"
+                android:id="@+id/article_subheading_pedro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="@dimen/padding_regular"
-                android:text="@string/article_subtitle"
+                android:text="@string/article_subtitle_pedro"
                 android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
 
             <TextView
-                android:id="@+id/article"
+                android:id="@+id/article_pedro"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:autoLink="web"
                 android:lineSpacingExtra="@dimen/line_spacing"
                 android:padding="@dimen/padding_regular"
-                android:text="@string/article_text" />
+                android:text="@string/article_text_pedro" />
 
         </LinearLayout>
     </ScrollView>
