--- a/ScrollingText/app/src/main/res/layout/activity_main.xml
+++ b/ScrollingText/app/src/main/res/layout/activity_main.xml
@@ -46,6 +46,23 @@
                 android:text="@string/gabriel_bio" />
 
             <TextView
+                android:id="@+id/ivan_heading"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="@dimen/padding_regular"
+                android:text="@string/ivan_name"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault" />
+
+            <TextView
+                android:id="@+id/ivan_bio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:autoLink="web"
+                android:lineSpacingExtra="@dimen/line_spacing"
+                android:padding="@dimen/padding_regular"
+                android:text="@string/ivan_bio" />
+
+            <TextView
                 android:id="@+id/pedro_heading"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
