--- a/ShoppingList/app/src/main/res/layout/activity_main.xml
+++ b/ShoppingList/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:text="@string/empty_slot_text"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
 
@@ -30,7 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
 
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
     <TextView
@@ -47,7 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
     <TextView
@@ -55,7 +55,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
     <TextView
@@ -63,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
     <TextView
@@ -71,7 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
     <TextView
@@ -79,7 +79,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
     <TextView
@@ -87,7 +87,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/empty_slot_text"
-        android:layout_marginBottom="6dp"
+        android:layout_marginBottom="12dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display4"
         android:textSize="20sp" />
 
@@ -98,7 +98,9 @@
         android:layout_height="wrap_content"
         android:background="#2196F3"
         android:textColor="@android:color/white"
-        android:text="@string/add_item_text" />
+        android:text="@string/add_item_text"
+        android:onClick="launchSecondActivity"/>
+
 
 
 </LinearLayout>
