--- a/ShoppingList/app/src/main/res/layout/activity_main2.xml
+++ b/ShoppingList/app/src/main/res/layout/activity_main2.xml
@@ -8,56 +8,178 @@
     tools:context=".Main2Activity">
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp">
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_width="0dp"
+            android:id="@+id/button1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="6dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="#2196F3"
-            android:gravity="center"
-            android:text="Button"
-            android:textColor="@android:color/white" />
+            android:onClick="returnItem"
+            android:text="@string/button1_text"
+            android:textColor="@android:color/white"/>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.12" />
 
         <Button
-            android:layout_width="0dp"
+            android:id="@+id/button2"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="#2196F3"
-            android:gravity="center"
-            android:text="Button"
-            android:textColor="@android:color/white" />
+            android:onClick="returnItem"
+            android:text="@string/button2_text"
+            android:textColor="@android:color/white"/>
+
     </LinearLayout>
 
     <LinearLayout
-        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal">
 
         <Button
-            android:layout_width="0dp"
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="6dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="#2196F3"
-            android:gravity="center"
-            android:text="Button"
-            android:textColor="@android:color/white" />
+            android:onClick="returnItem"
+            android:text="@string/button3_text"
+            android:textColor="@android:color/white"/>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.12" />
 
         <Button
-            android:layout_width="0dp"
+            android:id="@+id/button4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
+            android:layout_gravity="center_vertical"
             android:layout_weight="1"
             android:background="#2196F3"
-            android:gravity="center"
-            android:text="Button"
-            android:textColor="@android:color/white" />
+            android:onClick="returnItem"
+            android:text="@string/button4_text"
+            android:textColor="@android:color/white"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="#2196F3"
+            android:onClick="returnItem"
+            android:text="@string/button5_text"
+            android:textColor="@android:color/white"/>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.12" />
+
+        <Button
+            android:id="@+id/button6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="#2196F3"
+            android:onClick="returnItem"
+            android:text="@string/button6_text"
+            android:textColor="@android:color/white"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="#2196F3"
+            android:onClick="returnItem"
+            android:text="@string/button7_text"
+            android:textColor="@android:color/white"/>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.12" />
+
+        <Button
+            android:id="@+id/button8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="#2196F3"
+            android:onClick="returnItem"
+            android:text="@string/button8_text"
+            android:textColor="@android:color/white"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/button9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="#2196F3"
+            android:onClick="returnItem"
+            android:text="@string/button9_text"
+            android:textColor="@android:color/white"/>
+
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.12" />
+
+        <Button
+            android:id="@+id/button10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:background="#2196F3"
+            android:onClick="returnItem"
+            android:text="@string/button10_text"
+            android:textColor="@android:color/white"/>
+
     </LinearLayout>
 
 
