--- a/ShoppingList/app/src/main/res/layout/activity_main.xml
+++ b/ShoppingList/app/src/main/res/layout/activity_main.xml
@@ -7,100 +7,100 @@
     android:padding="12dp"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:text="@string/empty_slot_text"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/textView9"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/textView10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/empty_slot_text"
-        android:layout_marginBottom="12dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
-        android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/button"
-        style="@style/Widget.AppCompat.Button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#2196F3"
-        android:textColor="@android:color/white"
-        android:text="@string/add_item_text"
-        android:onClick="launchSecondActivity"/>
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:text="@string/empty_slot_text"
+            android:textAppearance="@style/TextAppearance.AppCompat.Display4"
+            android:textSize="20sp" />
 
+        <Button
+            android:id="@+id/button"
+            style="@style/Widget.AppCompat.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#2196F3"
+            android:onClick="launchSecondActivity"
+            android:text="@string/add_item_text"
+            android:textColor="@android:color/white"/>
 
 
 </LinearLayout>
